Pygments changelog
==================

Pull request numbers before 2.4.2 are not linked as they refer to the now defunct Bitbucket project.

Version 2.18.0
--------------
(unreleased)

- New lexers:

  * Janet (#2557)
  * Typst (#2596)
  * Lean 4 (#2618, #2626)
  * org-mode (#2636)
  * Promela (#2620)

- Updated lexers:

  * Bash: add ``openrc`` alias (#2599)
  * Coq: add keywords, lex more vernacular command arguments, produce
    fewer tokens on heading comments (#2678)
  * lean: Fix name handling (#2614)
  * Logtalk: add ``uninstantiation`` keyword and recognize
    escape sequences (#2619)
  * Python: fix highlighting of soft keywords before ``None``/``True``/``False``
  * reStructuredText: use ``Token.Comment`` for comments instead of
    ``Comment.Preproc`` (#2598)
  * Rust: highlight ``:``, ``::`` and ``->`` as ``Punctuation``
    and whitespace as ``Whitespace``, instead of ``Text``
    in both cases (#2631)
  * SQL Explain: allow negative numbers (#2610)
  * ThingsDB: add constants and new functions; support template
    strings (#2624)
  * UL4: support nested ``<?doc?>`` and ``<?note?>`` tags (#2597)
  * VHDL: support multi-line comments of VHDL-2008 (#2622)

- New styles:

  * Coffee (#2609)

- Make background colors in the image formatter work with Pillow 10.0 (#2623)
- Require Python 3.8. As a result, the ``importlib-metadata`` package
  is no longer needed for fast plugin discovery on Python 3.7.
  The ``plugins`` extra (used as, e.g., ``pip install pygments[plugins]``)
  is kept for backwards compatibility but now has no effect. (#2601)
- Require the ``url`` attribute for lexers inside Pygments, add
  it to many lexers (#2588)
- Replace Pyflakes linter with Ruff
- Add macOS CI (#2594)
- Built-in lexers now declare the version of Pygments in which they were
  added in a required ``version_added`` lexer attribute, instead of a
  ``.. versionadded::`` directive in the docstring (#2589)
- The ``url`` attribute is now required for built-in lexers and