@@ -14,6 +14,7 @@ Version 2.18.0
   * Lean 4 (#2618, #2626)
   * org-mode (#2636)
   * Promela (#2620)
+  * Soong / ``Android.bp`` (#2659)
 
 - Updated lexers:
 
